[gd_scene load_steps=3 format=3 uid="uid://dxtmnq1665owm"]

[ext_resource type="Script" uid="uid://bvdu63lrngdxb" path="res://Scripts/Main Menu/menu.gd" id="1_lti8b"]
[ext_resource type="Texture2D" uid="uid://cbgovrifgisaw" path="res://Assets/bandiera ita.png" id="2_eas8t"]

[node name="Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_lti8b")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.045
anchor_right = 0.948
anchor_bottom = 0.637
offset_left = -91.4
offset_top = 24.0
offset_right = 94.8398
offset_bottom = 416.04
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 747.0
offset_right = 568.0
offset_bottom = 916.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "SELEZIONA LINGUA
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 600)
anchors_preset = -1
anchor_left = 0.337
anchor_top = 0.348
anchor_right = 0.699
anchor_bottom = 0.759
offset_left = -21.04
offset_top = 0.159973
offset_right = 148.92
offset_bottom = 156.28
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 5.0

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Gioca"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Opzioni"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Crediti"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Esci
"

[node name="LanguagesButton" type="TextureButton" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 99.0
offset_top = -209.0
offset_right = 349.0
offset_bottom = -42.0
grow_vertical = 0
texture_normal = ExtResource("2_eas8t")

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
